Fixed login btn alignment

--- a/app/assets/stylesheets/partials/_base.css.scss
+++ b/app/assets/stylesheets/partials/_base.css.scss
@@ -36,6 +36,7 @@ body, html {
     width:220px;
     min-height: 250px;
     box-shadow: none;
+    border: 1px solid #ccc;
     text-align: center;
 
     .popover-content {
