--- a/app/assets/stylesheets/partials/_header.css.scss
+++ b/app/assets/stylesheets/partials/_header.css.scss
@@ -14,6 +14,7 @@ ul.nav.navbar-nav.navbar-right {
     background: none;
     border: 1px solid #fff;
     padding: 7px 15px;
+    margin-top: 7px;
     @include border-radius(999px);
     @include transition(all, 0.5s, ease);
     &:hover {
